# RawEncoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: RawVideo.h  RawVideoEncoder.h  Utility.h  VideoManager.h
src/: VideoManager.cpp  main.cpp  mp4encoder_mono.cpp  mp4encoder_mono_single.cpp  mp4encoder_stereo.cpp
